--- a/resources/style/themes_manager.css
+++ b/resources/style/themes_manager.css
@@ -1,227 +1,44 @@
-.ws_body{
+.theme_container {
+	width: 250px;
+	border: 1px solid #d7d7d7;
+	border-width: 1px 0 0 1px;
+	float: right;
 	overflow: auto;
 }
 
-.ws_functionmenu{
-	width: 145px !important;
+.themePreviewContainerStyle {
+	width: 100%;
+	overflow: auto;
 }
 
-.ws_main{
-	position: absolute;
-	left: -55px !important;
-	right: 0;
-	width: auto;
-	bottom: 0;
-	top: 60px;
-}
-
-.ws_main .wf_block {
-	position: absolute;
-	width: auto;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	top: 0;
-	height: auto;
-}
-
-.multiImageGallery{}
-
-.theme_container .wf_block{
-	position: relative;
-	top: auto !important;
+.themePreviewAndSliderContainerStyle {
+	overflow: auto;
 	float: left;
-	display: block;
 }
 
-body#themeManager .ws_main .wf_block .wf_blockmainarea {
-	bottom: 0;
-	top: 0;
-	height: auto !important;
-	position: absolute;
-	width: auto;
-	left: 0;
-	right: 0;
+.themesSliderContainer {
+	width: 100%;
 }
 
-body#themeManager .ws_main .theme_container .wf_titlebar{
-	display: none;
+.themesContentContainerStyleClass {
+	overflow: auto;
+	height: 70%;
 }
 
-
-
-body#themeManager .ws_main .theme_container .wf_block{
-	width: 100% !important;
-	border: 0 !important;
+.themePreviewBigImageStyle {
+	width: 50em;
 }
 
-
-body#themeManager .ws_main .theme_container .wf_block .wf_blockmainarea {
-	position: relative !important;
-	left: auto !important;
-	right: auto !important;
-	top: auto !important;
-	bottom: auto !important;
-}
-
-
-
-img#themePreview {
-	/*display: block;
-	position: absolute;
-	bottom: 155px;
-	top: 8px;
-	left: 8px;
-	right: 220px;
-	width: auto;*/
-}
-
-iframe#themePreview{
-	display: block;
-	position: absolute;
-	bottom: 155px;
-	top: 1px;
-	left: 1px;
-	right: 213px;
-	width: auto;
-}
-
-img#themePreview {/*
-	display: block;
-	position: absolute;
-	bottom: 155px;
-	top: 8px;
-	left: 8px;
-	right: 220px;
-	width: auto;
-	*/
-}
-
-
-#themesSliderContainer {
-	position: absolute;
-	bottom: 0;
-	left: 8px;
-	right: 220px;
-	width: auto;
-}
-
-.theme_container {
-	position: absolute;
-	top: 8px;
-	bottom: 0px;
-	right: 0px;
-	width: 205px;
-	z-index: 1;
-	height: auto;
-	border: 1px solid #d7d7d7;
-	border-width: 1px 0 0 1px
+div.themeVariationGroup {
+	width: 175px !important;
 	overflow: hidden;
 }
 
-.theme_container .wf_block{
-position: absolute;
-height: 80px; !important;
-top: auto !important;
-bottom: 0 !important;
-}
-
-#themeStyleVariations{
-top: 2px !important;
-bottom: 168px !important;
-height: auto !important;
-position: absolute;
-overflow: auto;
-left: 0;
+.theme_container ul {
+	margin: 0;
+	padding: 5px;
 }
 
 .themeVariationGroup li input{
-margin-bottom: -2px;
-}
-
-div#themeSaveArea{
-position: absolute;
-bottom: 85px !important;
-top: auto !important;
-height: auto !important;
-border-width: 1px 0;
-width: 100% !important;
-left: 3px
-}
-
-div#themeUsability{
-bottom: 150px;
-position: absolute;
-width: 100%;
-left: -1px;
-}
-
-div#themeSaveArea input#changeVariationsButton{
-margin-top: 5px;
-}
-
-div.themeVariationGroup{
-width: 175px !important;
-overflow: hidden;
-}
-
-
-.theme_container ul{
-	margin: 0;
-	padding: 5px;
-
-}
-
-.theme_container .variationsAndSaveBox .wf_blockmainarea{
-	height: 316px;
-	overflow: auto;
-}
-
-.wf_webdav_upload{
-	width: 192px !important;
-	margin-left: 0;
-}
-
-.wf_webdav_upload .wf_inputtext{
-	margin-bottom: 8px !important;
-	display: block;
-}
-
-.fileUploadInput{
-}
-
-.wf_webdav_upload .wf_webdav_upload_button{
-	margin-top: 4px !important;
-}
-
-.multiImageGallery{
-	position: relative !important;
-}
-
-.themesTicker{
-	position: absolute !important;
-	width: 92%;
-}
-
-.theme_slider #rightScrollerContainer{
-	position: absolute !important;
-	right: 0 !important;
-	left: auto !important;
-	width: 34px;
-	height: 150px !important;
-	bottom: 0 !important;
-	background: #000;
-}
-
-.theme_slider #rightScrollerContainer #rightScroller{
-	float: right;
-	margin-top: 52px;
-}
-
-div#siteTemplatesContainer .wf_blockmainarea{
-	/*border: solid 1px red;*/
-	height: auto;
-	top: 0;
-	margin-top: 22px;
-	position: relative;
+	margin-bottom: -2px;
 }
